# reactos

drivers/base/bootvid/: CMakeLists.txt
drivers/filesystems/udfs/: CMakeLists.txt
hal/halx86/: CMakeLists.txt
ntoskrnl/: CMakeLists.txt
ntoskrnl/include/internal/: ntoskrnl.h
ntoskrnl/ke/: bug.c
ntoskrnl/ke/i386/: kiinit.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
sdk/cmake/: config.cmake  gcc.cmake
sdk/include/psdk/: winbase.h
sdk/lib/: CMakeLists.txt
sdk/lib/ksanitize/: CMakeLists.txt  ubsan.c
win32ss/drivers/font/ftfd/: CMakeLists.txt
